[gd_scene load_steps=4 format=3 uid="uid://c22trqfg83j6x"]

[ext_resource type="Script" path="res://code/menu/unit_selection.gd" id="1_8jss4"]
[ext_resource type="PackedScene" uid="uid://dkokv0n7isjqq" path="res://data/widgets/menu_button.tscn" id="2_48nsr"]
[ext_resource type="PackedScene" uid="uid://c5dffmkt6tsr8" path="res://data/widgets/unit_button.tscn" id="3_pg111"]

[node name="UnitSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8jss4")

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 253.0
offset_bottom = 129.0
text = "Return"

[node name="MenuButton" parent="." instance=ExtResource("2_48nsr")]
layout_mode = 1

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -253.0
offset_top = -129.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
text = "Save deck"

[node name="UnitsContainer" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 42.0
offset_top = 169.0
offset_right = 42.0
offset_bottom = 169.0
metadata/_edit_group_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="UnitsContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 824.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="HFlowContainer" parent="UnitsContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UnitButton0" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10000

[node name="UnitButton1" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10001

[node name="UnitButton2" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10002

[node name="UnitButton3" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10003

[node name="UnitButton4" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10004

[node name="UnitButton5" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10005

[node name="UnitButton6" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10006

[node name="UnitButton7" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10007

[node name="UnitButton8" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10008

[node name="UnitButton9" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10009

[node name="UnitButton10" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10010

[node name="UnitButton11" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10011

[node name="UnitButton12" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10012

[node name="UnitButton13" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10013

[node name="UnitButton14" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10014

[node name="UnitButton15" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10015

[node name="UnitButton16" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10016

[node name="UnitButton17" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10017

[node name="UnitButton18" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10018

[node name="UnitButton19" parent="UnitsContainer/ScrollContainer/HBoxContainer" instance=ExtResource("3_pg111")]
layout_mode = 2
unit_id = 10019

[node name="UnitInDeckLabel" type="Label" parent="UnitsContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 615.0
offset_top = -57.0
offset_right = 804.0
offset_bottom = -21.0
theme_override_font_sizes/font_size = 26
text = "Units in deck: ?"
vertical_alignment = 2
justification_flags = 162

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
